Card,Deck,Game and Player classes are added.Deck initialization,deck shuffling,cutting deck,dealing first hand,printing game deck and printing active hand functions are implemented.

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,4 @@
 eclipse.preferences.version=1
+encoding//src/consoleApp/Card.java=UTF-8
 encoding//src/consoleApp/Cards.java=UTF-8
+encoding//src/consoleApp/Game.java=UTF-8
